--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.7",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "redux-thunk": "^2.4.1"
   },
   "scripts": {
