--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-redux": "^7.2.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.50.0",
+    "swiper": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,13 +40,13 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
+    "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-syntax-jsx": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
