--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.2.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "redux-thunk": "^2.4.1",
     "sass": "^1.50.0",
     "swiper": "^8.1.0"
