--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.7",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-slick": "^0.28.1",
     "redux-thunk": "^2.4.1",
     "sass": "^1.50.0",
