--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,7 @@
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
-    "no-shadow": "off",
-    "react/prop-types":"off"
+    "no-shadow": "off"
   },
 
   "settings": {
@@ -27,6 +26,7 @@
       "version": "detect"
     }
   },
+
   
     "ignorePatterns": [
     "dist/",
