--- a/package.json
+++ b/package.json
@@ -8,19 +8,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.26.1",
-    "bootstrap": "^5.1.3",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-bootstrap": "^2.2.3",
-    "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.7",
+    "react-router": "^6.3.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.50.0",
     "swiper": "^8.1.0"
   },
   "scripts": {
@@ -55,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "sass": "^1.50.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
