--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,17 +20,15 @@
     "import/no-unresolved": "off",
     "no-shadow": "off"
   },
-
   "settings": {
     "react": {
       "version": "detect"
     }
   },
-
-  
     "ignorePatterns": [
     "dist/",
-    "build/"
+    "build/",
+    "src/"
   ]
 
 }
