--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "extends": ["plugin:react/recommended"],
+  "extends": ["airbnb", "plugin:react/recommended"],
   "plugins": ["react"],
   "rules": {
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
@@ -20,14 +20,8 @@
     "import/no-unresolved": "off",
     "no-shadow": "off"
   },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
-    "ignorePatterns": [
+  "ignorePatterns": [
     "dist/",
     "build/"
   ]
-
 }
