--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
+
 {
   "env": {
     "browser": true,
@@ -12,25 +13,16 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "extends": ["plugin:react/recommended"],
+  "extends": ["airbnb", "plugin:react/recommended"],
   "plugins": ["react"],
   "rules": {
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
-    "no-shadow": "off",
-    "react/prop-types":"off"
+    "no-shadow": "off"
   },
-
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
-  
-    "ignorePatterns": [
+  "ignorePatterns": [
     "dist/",
     "build/"
   ]
-
 }
