--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
+    "react-bootstrap-card": "^0.2.1",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
