--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,25 +12,18 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "extends": ["plugin:react/recommended"],
+  "extends": ["airbnb", "plugin:react/recommended"],
   "plugins": ["react"],
   "rules": {
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
     "no-shadow": "off",
-    "react/prop-types":"off"
+    "react/prop-types": 0,
+    "array-callback-return": 0
   },
-
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
-  
-    "ignorePatterns": [
+  "ignorePatterns": [
     "dist/",
     "build/"
   ]
-
 }
