--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.50.0",
     "swiper": "^8.1.0"
